Fixing mobile layout issues

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -4,6 +4,7 @@
 
 .profile-image {
     width: 360px;
+    max-width: 90vw;
     height: 450px;
 }
 
